updated npm packages

--- a/thingspeak/package.json
+++ b/thingspeak/package.json
@@ -4,6 +4,7 @@
 	"description": "A nodejs service that uploads incoming serial data to thingspeak",
 	"main": "index.js",
 	"dependencies": {
+		"bindings": "^1.5.0",
 		"blessed": "^0.1.81",
 		"blessed-contrib": "^4.8.5",
 		"express": "*",
